Added index to docs

--- a/src/Dmishh/Bundle/SettingsBundle/Resources/doc/i18n.md
+++ b/src/Dmishh/Bundle/SettingsBundle/Resources/doc/i18n.md
@@ -1,4 +1,14 @@
-### I18n
+## SettingsBundle
+
+* [Installation](installation.md)
+* [General usage](general-usage.md)
+* [Scopes](scopes.md)
+* [Advanced configuration](advanced-configuration.md)
+* **I18n**
+* [Customization](customization.md)
+* [FAQ](faq.md)
+
+## I18n
 
 #### Define custom settings names
 
